--- a/confeti.html
+++ b/confeti.html
@@ -10,7 +10,7 @@
 
 html, body {
   color: rgb(237, 231, 255);
-  background-image: url(https://i.imgur.com/RAmWQeD.png);
+  background-image: url(https://img.xatblog.net/image/kTfUa6Nmj.png);
   padding: 0px;
   margin: 0;
   height: 100%;
