--- a/confeti.html
+++ b/confeti.html
@@ -10,6 +10,7 @@
 				background: url() no-repeat;
 				cursor: url(https://i.imgur.com/QpftHmt.png), auto;
 				margin: 0px;
+				
 				overflow: hidden;
 			}
 
@@ -19,8 +20,11 @@
 			}
 		</style>
 	</head>
+	<div align="center">	
+           <iframe src="https://kastro-59.github.io/star/Logo-Kastro.gif" width="100" height="100" frameborder="0"></iframe>
+           </div>
 	      <div align="center">	
-           <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="250" autoplay="true" frameborder="10" scrolling="no"></iframe>
+           <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="150" autoplay="true"  frameborder="0" scrolling="no"></iframe>
          </div>
 <script language="JavaScript" type="text/javascript">
     function click(){
