--- a/confeti.html
+++ b/confeti.html
@@ -20,9 +20,8 @@
 			}
 		</style>
 	</head>
-	<div align="center">	
-           <iframe src="https://kastro-59.github.io/star/Logo-Kastro.gif" width="100" height="100" frameborder="0"></iframe>
-           </div>
+	<center><font color="#ff0000"><span style="font-size: 28px; background-color: rgb(0, 0, 0);">REPRODUCTORES PARA RADIOS ICECAST Y SHOUTCAST .&nbsp;</span></font></center>
+
 	      <div align="center">	
            <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="150" autoplay="true"  frameborder="0" scrolling="no"></iframe>
          </div>
