--- a/confeti.html
+++ b/confeti.html
@@ -20,10 +20,10 @@
 			}
 		</style>
 	</head>
-	<center><font color="#ff0000"><span style="font-size: 28px; background-color: rgb(0, 0, 0);">REPRODUCTORES PARA RADIOS ICECAST Y SHOUTCAST .&nbsp;</span></font></center>
+	<center><font color="#ff0000"><span style="font-size: 48px; background-color: rgb(0, 0, 0);">REPRODUCTORES PARA RADIOS ICECAST Y SHOUTCAST .&nbsp;</span></font></center>
 
-	      <div align="center">	
-           <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="650" height="150" autoplay="true"  frameborder="0" scrolling="no"></iframe>
+	      <div align="left">	
+           <iframe src="https://radioplayer.link/stream/?name=Radio-KC&bgcolor=1b50c2&textcolor=acdeff&stream=https://stream.zeno.fm/emertvc73mruv.aac" width="350" height="75" autoplay="true"  frameborder="0" scrolling="no"></iframe>
          </div>
 <script language="JavaScript" type="text/javascript">
     function click(){
