--- a/cors-anywhere.html
+++ b/cors-anywhere.html
@@ -64,7 +64,7 @@ textarea {
 </div>
 
 <script>
-  var cors_api_url = 'https://kastro-59.github.io/confeti/';
+  var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
   function doCORSRequest(options, printResult) {
     var x = new XMLHttpRequest();
     x.open(options.method, cors_api_url + options.url);
